--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 </head>
 <body>
     <h1>Draw.io Clone - PWA</h1>
+    <input type="color" id="colorPicker" value="#000000">
+    <input type="range" id="brushSize" min="1" max="10" value="2">
+    <button id="undo">Undo</button>
+    <button id="redo">Redo</button>
+    <button id="clear">Clear</button>
+    <button id="save">Save</button>
     <canvas id="drawingCanvas"></canvas>
     <script src="script.js"></script>
 </body>
